Move nativeToken into configuration
