# radixdlt-core/radixdlt/src/integration/java/com/radixdlt/integration/staking/actions/SetValidatorFee.java
@@ -64,7 +64,7 @@
 package com.radixdlt.integration.staking.actions;
 
 import com.radixdlt.api.core.core.openapitools.model.Data;
-import com.radixdlt.api.core.core.openapitools.model.EngineConfigurationResponse;
+import com.radixdlt.api.core.core.openapitools.model.EngineConfiguration;
 import com.radixdlt.api.core.core.openapitools.model.NetworkStatusResponseNodeIdentifiers;
 import com.radixdlt.api.core.core.openapitools.model.Operation;
 import com.radixdlt.api.core.core.openapitools.model.OperationGroup;
@@ -78,8 +78,7 @@ public final class SetValidatorFee implements NodeTransactionAction {
 	}
 
 	@Override
-	public OperationGroup toOperationGroup(EngineConfigurationResponse configurationResponse, NetworkStatusResponseNodeIdentifiers nodeIdentifiers) {
-		var nativeToken = configurationResponse.getNativeToken();
+	public OperationGroup toOperationGroup(EngineConfiguration configuration, NetworkStatusResponseNodeIdentifiers nodeIdentifiers) {
 		return new OperationGroup().addOperationsItem(
 			new Operation()
 				.type("Data")
